# cma-lab

./: .gitignore  CMakeLists.txt  README.md  main.cpp  square_matrix.cpp  square_matrix.h  square_matrix_manager.cpp  square_matrix_manager.h
data/task1/: sampleA.data  sampleB.data
data/task2/: sampleA.data  sampleB.data
data/task4/: sampleA.data  sampleB.data
data/tests/: testA.data  testC.data
data/tests/DLU/: testB.data
data/tests/LDLT/: testA.data  testB.data  testC.data
io/: load.cpp  load.h
matrix/: decompositions.h  load_matrix.h  relaxation.h  square_matrix.h  square_matrix_manager.h  three_diagonal_matrix.h  validation.h
report/: report.cpp  report.h
utils/: matrix_factory.h  matrix_generator.h  print_utils.h  time_measurer.h  vector_utils.h
